@@ -1,6 +1,7 @@
 MPD_sima v0.15.4 UNRELEASED
 
- * 
+ * Refactored random plugin
+ * …
 
 -- kaliko jack <kaliko@azylum.org>
 
